--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,8 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("Michael", "Belitz", email = "mbelitz@ufl.edu", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
+Depends: 
+    R (>= 3.5)
 Imports:
     boot,
     fitdistrplus,
