--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: phenesse
-Title: Package to estimate phenological metrics using presence-only data. 
+Title: Package to estimate phenological metrics using presence-only data 
 Version: 0.0.0.9000
 Authors@R: c(person("Michael", "Belitz", email = "mbelitz@ufl.edu", role = c("aut", "cre")),
            person("Caitlin", "Campbell", email = "caitjcampbell@gmail.com", role = "ctb"))
