--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,8 @@ Imports:
     stats,
     dplyr
 License: CC0
+URL: https://github.com/mbelitz/phenesse
+BugReports: https://github.com/mbelitz/phenesse/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
