--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,10 @@ Description: Package generates Weibull-parameratized estimates of phenology for 
     a distribution. Non-parametric bootstrapping can be used to generate a confidence interval around those
     estimates. Additionally, this package offers an easy way to perform non-parametric bootstrapping around
     quantile estimates or mean estimates.
-Suggests: knitr, rmarkdown
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
 Depends: 
     R (>= 3.5)
