fixed spelling errors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Package to estimate phenological metrics using presence-only data
 Version: 0.1.0
 Authors@R: c(person("Michael", "Belitz", email = "mbelitz@ufl.edu", role = c("aut", "cre")),
            person("Caitlin", "Campbell", email = "caitjcampbell@gmail.com", role = "ctb"))
-Description: Package generates Weibull-parameratized estimates of phenology for any percentile of 
+Description: Package generates Weibull-parameterized estimates of phenology for any percentile of 
     a distribution. Non-parametric bootstrapping can be used to generate confidence intervals around those
     estimates. Additionally, this package offers an easy way to perform non-parametric bootstrapping to 
     generate confidence intervals for quantile estimates or mean estimates.
