--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Description: Package generates Weibull-parameterized estimates of phenology for 
     a distribution. Non-parametric bootstrapping can be used to generate confidence intervals around those
     estimates. Additionally, this package offers an easy way to perform non-parametric bootstrapping to 
     generate confidence intervals for quantile estimates or mean estimates.
+Maintainer: Michael Belitz <mbelitz@ufl.edu>
 Suggests: 
     knitr,
     rmarkdown,
