--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,12 @@ Version: 0.1.0
 Authors@R: c(person("Michael", "Belitz", email = "mbelitz@ufl.edu", role = c("aut", "cre")),
            person("Caitlin", "Campbell", email = "caitjcampbell@gmail.com", role = "ctb"))
 Description: Generates Weibull-parameterized estimates of phenology for any percentile of 
-    a distribution. Non-parametric bootstrapping can be used to generate confidence intervals around those
-    estimates. Additionally, this package offers an easy way to perform non-parametric bootstrapping to 
-    generate confidence intervals for quantile estimates or mean estimates.
+    a distribution using the framework established in Cooke [1979] 
+    <doi.org/10.1093/biomet/66.2.367>. Non-parametric bootstrapping can be used 
+    to generate confidence intervals around those estimates. 
+    Additionally, this package offers an easy way to perform non-parametric 
+    bootstrapping to generate confidence intervals for quantile estimates or 
+    mean estimates.
 Maintainer: Michael Belitz <mbelitz@ufl.edu>
 Suggests: 
     knitr,
