--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.1.0
 Authors@R: c(person("Michael", "Belitz", email = "mbelitz@ufl.edu", role = c("aut", "cre")),
            person("Caitlin", "Campbell", email = "caitjcampbell@gmail.com", role = "ctb"))
 Description: Generates Weibull-parameterized estimates of phenology for any percentile of 
-    a distribution using the framework established in Cooke [1979] 
+    a distribution using the framework established in Cooke (1979)
     <doi.org/10.1093/biomet/66.2.367>. Non-parametric bootstrapping can be used 
     to generate confidence intervals around those estimates. 
     Additionally, this package offers an easy way to perform non-parametric 
