--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: phenesse
 Title: Estimate Phenological Metrics using Presence-Only Data 
 Version: 0.1.1
-Authors@R: c(person("Michael", "Belitz", email = "mbelitz@ufl.edu", role = c("aut", "cre")),
-           person("Caitlin", "Campbell", email = "caitjcampbell@gmail.com", role = "ctb"),
+Authors@R: c(person("Michael", "Belitz", email = "mbelitz@ufl.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-8162-5998")),
+           person("Caitlin", "Campbell", email = "caitjcampbell@gmail.com", role = "ctb", comment = c(ORCID = "0000-0002-8199-7775")),
            person("Daijinag", "Li", email = "daijianglee@gmail.com", role = "ctb"))
 Description: Generates Weibull-parameterized estimates of phenology for any percentile of 
     a distribution using the framework established in Cooke (1979)
