--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Estimate Phenological Metrics using Presence-Only Data
 Version: 0.1.1
 Authors@R: c(person("Michael", "Belitz", email = "mbelitz@ufl.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-8162-5998")),
            person("Caitlin", "Campbell", email = "caitjcampbell@gmail.com", role = "ctb", comment = c(ORCID = "0000-0002-8199-7775")),
-           person("Daijiang", "Li", email = "daijianglee@gmail.com", role = "ctb", comment = c(ORCID = "0000-0002-0925-3421))
+           person("Daijiang", "Li", email = "daijianglee@gmail.com", role = "ctb", comment = c(ORCID = "0000-0002-0925-3421"))
 Description: Generates Weibull-parameterized estimates of phenology for any percentile of 
     a distribution using the framework established in Cooke (1979)
     <doi:10.1093/biomet/66.2.367>.. Extensive testing against other 
