updated DOI in description field to preferred style

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Generates Weibull-parameterized estimates of phenology for any perc
     <doi:10.1093/biomet/66.2.367>. Extensive testing against other 
     estimators suggest the weib_percentile() function is especially useful in 
     generating more accurate and less biased estimates of onset and offset 
-    (Belitz et al. 2020 <doi.org:10.1111/2041-210X.13448>. Non-parametric 
+    (Belitz et al. 2020 <doi:10.1111/2041-210X.13448>. Non-parametric 
     bootstrapping can be used to generate confidence intervals around those 
     estimates, although this is computationally expensive. Additionally, this 
     package offers an easy way to perform non-parametric bootstrapping to 
